Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
11.4
-
Not for ES Release Notes
Description
The test main.func_json is failing in the 11.4 branch starting with this change by rucha174 that attempts to fix MDEV-36809.
Attachments
Issue Links
- is caused by
-
MDEV-36809 json_array_intersect crashes when unused table ref provided
-
- Closed
-
- is part of
-
MDEV-36647 No red leaves in the forest
-
- Open
-
- relates to
-
MDEV-39716 json_array_intersect in cursor protocol mode not returning array overlaps (func_json.test)
-
- Closed
-