MDEV-37864: mysql-test/mtr --cursor main.func_json fails

Analysis:
Maximum length of the field of the temorary table that cursor protocol uses
is not enough, which it actually gets when we prepare the
json_array_intersect() function and set the max length of the result.
So even though the entire result is sent, only partial is actually copied
because the field length is not enough.

Fix:
Have enough max_length.